--- a/components/serialization/form/spotBugsExcludeFilter.xml
+++ b/components/serialization/form/spotBugsExcludeFilter.xml
@@ -12,4 +12,8 @@ xsi:schemaLocation="https://github.com/spotbugs/filter/3.0.0 https://raw.githubu
 			<Class name="com.microsoft.kiota.serialization.mocks.TestEntity" />
 		</Or>
 	</Match>
+	<Match>
+		<Bug pattern="NP_BOOLEAN_RETURN_NULL" />
+		<Class name="com.microsoft.kiota.serialization.FormParseNode" />
+	</Match>
 </FindBugsFilter>
